objects/QualificationDocumentOption__c.object
<CustomObject>
    <fields>
        <fullName>DocumentOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The document option used by this record.</description>
        <inlineHelpText>The document option used by this record.</inlineHelpText>
        <label>Document Option</label>
        <referenceTo>DocumentOption__c</referenceTo>
        <relationshipName>QualificationOption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentStatusGenerated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The score for this document based on an evaluation of the characteristics needed for this document to satisfy this document step.</description>
        <inlineHelpText>The score for this document based on an evaluation of the characteristics needed for this document to satisfy this document step.</inlineHelpText>
        <label>Document Status</label>
        <referenceTo>DocumentStatus__c</referenceTo>
        <relationshipLabel>Qualification Document Options</relationshipLabel>
        <relationshipName>QualificationDocumentOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentStatusRankOrderGenerted__c</fullName>
        <formula>DocumentStatusGenerated__r.RankOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Status Rank Order Generated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmployeeSourceEidFormula__c</fullName>
        <description>This gets the Document Source EID Formula.</description>
        <formula>DocumentOption__r.DocumentType__r.DocumentSource__r.DocumentSourceEID__c</formula>
        <label>Employee Source Eid Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QualificationDocumentOptionEID__c</fullName>
        <description>The Enterprise ID for this record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this record.</inlineHelpText>
        <label>Qualification Document Option EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QualificationDocumentStep__c</fullName>
        <description>The qualification document step fulfilled by this document option.</description>
        <inlineHelpText>The qualification document step fulfilled by this document option.</inlineHelpText>
        <label>Qualification Document Step</label>
        <referenceTo>QualificationDocumentStep__c</referenceTo>
        <relationshipLabel>Qualification Document Options</relationshipLabel>
        <relationshipName>QualificationOptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RepositoryDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The repository document that fulfills this function for this employee</description>
        <inlineHelpText>The repository document that fulfills this function for this employee</inlineHelpText>
        <label>Repository Document</label>
        <referenceTo>RepositoryDocument__c</referenceTo>
        <relationshipLabel>Qualification Document Options</relationshipLabel>
        <relationshipName>QualificationDocumentOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Qualification Document Option</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Qualification Document Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualification Document Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>